# template-script-data-processor

./: .gitignore  README.md  __main__.py  pyproject.toml  setup.cfg
src/: datasets.py  processor.py  script.py
tests/unit/: test_datasets.py  test_processor.py  test_script.py
