[tool.poetry]
name = "etl-test"
version = "0.1.0"
description = "ETL Test"
authors = ["José Antonio Perdiguero López <jperdiguero@credijusto.com>"]

[tool.poetry.dependencies]
python = "^3.8.0"
clinner = "^1.12.3"
pandas = "^1.1.4"
fastparquet = "^0.4.1"
python-snappy = "^0.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
flake8 = "^3.7"
isort = "^4.3"
pytest-xdist = "^1.30"
pytest-cov = "^2.8"
ipython = "^7.10"
ipdb = "^0.13.0"
black = {version = "^19.10-beta.0", allow-prereleases = true}

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.data
  | build
  | dist
)/
'''

[tool.isort]
atomic = true
multi_line_output = 3
include_trailing_comma = true
not_skip = "__init__.py"
line_length = 120
