[metadata]
description-file = README.md
license-file = LICENSE.md

[tool:pytest]
minversion = 3
addopts = --junitxml=test-results/pytest/results.xml --no-cov-on-fail --cov-report=xml --cov-report=term-missing --cov-config=setup.cfg --cov=. --pdbcls=IPython.terminal.debugger:TerminalPdb
norecursedirs =
	.*
markers =
    type_unit: unit tests
    type_integration: integration tests
    execution_slow: slow execution tests
    execution_fast: fast execution tests
    priority_high: high priority tests
    priority_mid: mid priority tests
    priority_low: low priority tests
	case_positive: positive test case
	case_negative: negative test case

[coverage:run]
source = .
branch = True
omit =
	*__init__.py
	*__main__.py
	*tests*
	make

[coverage:report]
show_missing = True
ignore_errors = True
fail_under = 0
exclude_lines =
	noqa
	pragma: no cover
	pass
	\.\.\.

	raise AssertionError
	raise NotImplementedError

	if 0:
	if __name__ == .__main__.:

	def __repr__
	if cls\.debug
	if settings\.DEBUG

[coverage:paths]
source = src

[coverage:html]
directory = test-results/coverage_html/

[coverage:xml]
output = test-results/coverage.xml

[flake8]
max-line-length = 120
ignore = N804,W503,E203,W291
max-complexity = 10

